# akvirtualcamera

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  akvirtualcamera.pro  appveyor.yml  commons.cmake  commons.pri  package_info.conf.in  qqq
.github/: FUNDING.yml
Manager/: CMakeLists.txt  Manager.pro
Manager/src/: cmdparser.cpp  cmdparser.h  main.cpp
Service/: CMakeLists.txt
Service/src/: main.cpp  service.cpp  service.h
VCamUtils/: CMakeLists.txt  VCamUtils.pri  VCamUtils.pro
VCamUtils/src/: algorithm.h  color.h  colorcomponent.cpp  colorcomponent.h  colorconvert.cpp  colorconvert.h  colorplane.cpp  colorplane.h  commons.h  datamodetypes.h  fraction.cpp  fraction.h  ipcbridge.h  logger.cpp  logger.h  message.cpp  message.h  messageclient.cpp  messageclient.h  messageserver.cpp  messageserver.h  rect.cpp  rect.h  servicemsg.h  settings.cpp  settings.h  sharedmemory.cpp  sharedmemory.h  sockets.cpp  sockets.h  timer.cpp  timer.h  utils.cpp  utils.h  videoadjusts.cpp  videoadjusts.h  videoconverter.cpp  videoconverter.h  videoformat.cpp  videoformat.h  (+6 more)
VCamUtils/src/image/: color.h  videoformat.cpp  videoformat.h  videoformattypes.h  videoframe.cpp
VCamUtils/src/logger/: logger.cpp  logger.h
capi/: CMakeLists.txt
capi/src/: capi.cpp  capi.h
cmio/: CMakeLists.txt  cmio.cmake  cmio.pri  cmio.pro
cmio/Assistant/: Assistant.pro  CMakeLists.txt
cmio/Assistant/src/: assistant.cpp  assistant.h  assistantglobals.h  main.cpp
cmio/Extension/: CMakeLists.txt  Info.plist.in
cmio/Extension/src/: extensiondevicesource.h  extensiondevicesource.mm  extensionprovidersource.h  extensionprovidersource.mm  extensionstreamsource.h  extensionstreamsource.mm  main.mm
cmio/ExtensionDelegate/: CMakeLists.txt  Info.plist.in
cmio/ExtensionDelegate/src/: appdelegate.h  appdelegate.mm  main.mm
cmio/PlatformUtils/: CMakeLists.txt  PlatformUtils.pro
cmio/PlatformUtils/src/: preferences.cpp  preferences.h  utils.cpp  utils.h
cmio/PlatformUtilsObjC/: CMakeLists.txt
cmio/PlatformUtilsObjC/src/: hacks.h  hacks.mm
cmio/VCamIPC/: CMakeLists.txt  VCamIPC.pro
cmio/VCamIPC/src/: ipcbridge.cpp  ipcbridge.mm
cmio/VirtualCamera/: CMakeLists.txt  Info.plist.in  VirtualCamera.pro
cmio/VirtualCamera/src/: clock.cpp  clock.h  device.cpp  device.h  object.cpp  object.h  objectinterface.cpp  objectinterface.h  objectproperties.cpp  objectproperties.h  plugin.cpp  plugin.h  plugininterface.cpp  plugininterface.h  queue.h  stream.cpp  stream.h  utils.cpp  utils.h
dshow/: CMakeLists.txt  dshow.cmake  dshow.pri
dshow/Assistant/: Assistant.pro  CMakeLists.txt
dshow/Assistant/src/: main.cpp  service.cpp  service.h
dshow/PlatformUtils/: CMakeLists.txt  PlatformUtils.pro
dshow/PlatformUtils/src/: messagecommons.h  messageserver.cpp  messageserver.h  mutex.cpp  mutex.h  preferences.cpp  preferences.h  sharedmemory.cpp  sharedmemory.h  utils.cpp  utils.h
dshow/VCamIPC/: CMakeLists.txt  VCamIPC.pro
dshow/VCamIPC/src/: ipcbridge.cpp
dshow/VirtualCamera/: CMakeLists.txt  VirtualCamera.def  VirtualCamera.pro
dshow/VirtualCamera/src/: basefilter.cpp  basefilter.h  classfactory.cpp  classfactory.h  cunknown.cpp  enummediatypes.cpp  enummediatypes.h  enumpins.cpp  enumpins.h  filtermiscflags.cpp  filtermiscflags.h  latency.cpp  latency.h  mediafilter.cpp  mediafilter.h  mediasample.cpp  mediasample.h  mediasample2.cpp  mediasample2.h  memallocator.cpp  memallocator.h  persist.cpp  persist.h  persistpropertybag.cpp  persistpropertybag.h  pin.cpp  pin.h  plugin.cpp  plugininterface.cpp  plugininterface.h  propertyset.cpp  propertyset.h  pushsource.cpp  pushsource.h  qualitycontrol.cpp  qualitycontrol.h  referenceclock.cpp  referenceclock.h  specifypropertypages.cpp  specifypropertypages.h  (+6 more)
windows/PlatformUtils/: CMakeLists.txt
windows/PlatformUtils/src/: cunknown.cpp  cunknown.h  preferences.cpp  preferences.h  utils.cpp  utils.h  videoprocamp.cpp  videoprocamp.h
windows/VCamIPC/: CMakeLists.txt
windows/VCamIPC/src/: ipcbridge.cpp
windows/dshow/BaseFilter/: CMakeLists.txt
windows/dshow/BaseFilter/src/: basefilter.cpp  basefilter.h  enummediatypes.cpp  enummediatypes.h  enumpins.cpp  enumpins.h  filtermiscflags.cpp  mediafilter.cpp  mediafilter.h  mediasample.cpp  mediasample.h  mediasample2.h  memallocator.cpp  memallocator.h  persist.h  persistpropertybag.cpp  persistpropertybag.h  pin.cpp  pin.h  propertyset.h  pushsource.cpp  pushsource.h  qualitycontrol.cpp  referenceclock.cpp  specifypropertypages.cpp  streamconfig.cpp  streamconfig.h  videoprocamp.cpp  videoprocamp.h
windows/dshow/Test/: CMakeLists.txt
windows/dshow/Test/src/: main.cpp
windows/dshow/VirtualCamera/: CMakeLists.txt  VirtualCamera.def
windows/dshow/VirtualCamera/src/: basefilter.cpp  basefilter.h  classfactory.cpp  classfactory.h  enummediatypes.h  enumpins.cpp  enumpins.h  filtermiscflags.h  latency.h  mediafilter.h  mediasample.cpp  memallocator.h  persist.h  persistpropertybag.h  pin.cpp  plugin.cpp  plugin.h  plugininterface.cpp  plugininterface.h  qualitycontrol.h  referenceclock.h  specifypropertypages.cpp  specifypropertypages.h  streamconfig.cpp  streamconfig.h  videocontrol.h
windows/mf/FakeMFSensorGroup/: CMakeLists.txt  FakeMFSensorGroup.def
windows/mf/FakeMFSensorGroup/src/: mfvcamimpl.cpp  mfvcamimpl.h  plugin.cpp
windows/mf/MFUtils/: CMakeLists.txt
windows/mf/MFUtils/src/: utils.cpp  utils.h
windows/mf/MediaSource/: CMakeLists.txt
windows/mf/MediaSource/src/: activate.cpp  activate.h  attributes.cpp  attributes.h  controls.cpp  controls.h  mediaeventgenerator.cpp  mediaeventgenerator.h  mediasource.cpp  mediasource.h  mediastream.cpp  mediastream.h  mfvcam.h
windows/mf/Service/: CMakeLists.txt
windows/mf/Service/src/: main.cpp
windows/mf/Test/: CMakeLists.txt
windows/mf/Test/src/: main.cpp
windows/mf/VirtualCamera/: CMakeLists.txt  VirtualCamera.def
windows/mf/VirtualCamera/src/: classfactory.cpp  classfactory.h  plugin.cpp  plugin.h  plugininterface.cpp  plugininterface.h
(+97 files in other folders)
